# scala_compiler

./: CMakeLists.txt  input.scala  lexer.l  main.cpp  merge.bat  nl_test.txt  parser.y  scala_lexer.l  scala_parser.y  test.txt
.run/: ScalaLexer.run.xml  ScalaParser.run.xml
RTL_Scala/rtl/: Any.java  Array.java  ArrayIterator.java  Boolean.java  Char.java  Double.java  Int.java  Iterator.java  Object.java  Predef.java  StdIn.java  String.java  Unit.java
RTL_Scala/src/: Any.java  Array.java  Boolean.java  Char.java  Console.java  Double.java  Int.java  Object.java  Predef.java  SbtIn.java  StdIn.java  String.java  Unit.java
code_generation/: codegenerator.cpp  codegenerator.h  command.cpp  command.h
code_generation/tools/: byte_convert.cpp  byte_convert.h  utils.cpp  utils.h
codegen/: AccessFlags.h  BytecodeBuffer.cpp  BytecodeBuffer.h  ClassFileWriter.cpp  ClassFileWriter.h  Instructions.h  JarWriter.cpp  JarWriter.h  MainForwarderWriter.cpp  MainForwarderWriter.h  MethodCodeGenerator.cpp  MethodCodeGenerator.h
common/: CommonConstants.h
docs/: scala_ofic_grammer.txt
lexer/: BufferedYYLex.cpp  BufferedYYLex.h  TokenProcessor.cpp  TokenProcessor.h
nodes/: Node.cpp  Node.h  Types.cpp  Types.h  nodes.h
nodes/class/: ClassDefNode.cpp  ClassDefNode.h  ClassParamNode.cpp  ClassParamNode.h  ClassParamNodes.cpp  ClassParamNodes.h  ClassParamsNode.cpp  ClassParamsNode.h  ClassParentsNode.cpp  ClassParentsNode.h  ClassTemplateNode.cpp  ClassTemplateNode.h  ConstrInvokeNode.cpp  ConstrInvokeNode.h  ExtensionClassTemplateNode.cpp  ExtensionClassTemplateNode.h  PrimaryConstructorNode.cpp  PrimaryConstructorNode.h  SuperConstructorCallNode.cpp  SuperConstructorCallNode.h
nodes/definitions/: DclNode.cpp  DclNode.h  DefNode.cpp  DefNode.h
nodes/enum/: EnumCaseNode.cpp  EnumCaseNode.h  EnumDefNode.cpp  EnumDefNode.h  EnumStatNode.cpp  EnumStatNode.h  EnumStatsNode.cpp  EnumStatsNode.h
nodes/exprs/: ArgumentExprsNode.cpp  ArgumentExprsNode.h  AssignExprNode.cpp  AssignExprNode.h  AssignmentNode.cpp  AssignmentNode.h  ConstrExprNode.cpp  ConstrExprNode.h  ExprNode.cpp  ExprNode.h  ExprsNode.cpp  ExprsNode.h  IExpr.h  InfixExprNode.cpp  InfixExprNode.h  PrefixExprNode.cpp  PrefixExprNode.h  SimpleExpr1Node.cpp  SimpleExpr1Node.h  SimpleExprNode.cpp  SimpleExprNode.h
nodes/func/: FunDefNode.cpp  FunDefNode.h  FunSigNode.cpp  FunSigNode.h  FuncParamNode.cpp  FuncParamNode.h  FuncParamsNode.cpp  FuncParamsNode.h
nodes/generator/: EnumeratorPartNode.cpp  EnumeratorPartNode.h  EnumeratorsNode.cpp  EnumeratorsNode.h  GeneratorNode.cpp  GeneratorNode.h
nodes/id/: IdNode.cpp  IdNode.h  IdsNode.cpp  IdsNode.h  SingleStableIdNode.cpp  SingleStableIdNode.h  StableIdNode.cpp  StableIdNode.h
nodes/modifier/: ModifierNode.cpp  ModifierNode.h  ModifiersNode.cpp  ModifiersNode.h
nodes/stats/: BlockStatNode.cpp  BlockStatNode.h  BlockStatsNode.cpp  BlockStatsNode.h  EnumStat.cpp  EnumStat.h  EnumStats.cpp  EnumStats.h  TemplateStatNode.cpp  TemplateStatNode.h  TopStatNode.cpp  TopStatNode.h  TopStatSeqNode.cpp  TopStatSeqNode.h
nodes/templates/: ClassTemplateOptNode.cpp  ClassTemplateOptNode.h  EnumTemplateNode.cpp  EnumTemplateNode.h  TemplateDefNode.cpp  TemplateDefNode.h  TemplateStatNode.cpp  TemplateStatNode.h  TemplateStatsNode.cpp  TemplateStatsNode.h  TmplDefNode.cpp  TmplDefNode.h
nodes/trait/: TraitTemplateNode.cpp  TraitTemplateNode.h  TraitTemplateOptNode.cpp  TraitTemplateOptNode.h
nodes/try/: TryExprNode.cpp  TryExprNode.h
nodes/type/: CompoundTypeNode.cpp  CompoundTypeNode.h  SimpleTypeNode.cpp  SimpleTypeNode.h  SimpleTypesNode.cpp  SimpleTypesNode.h
nodes/var/: VarDefsNode.cpp  VarDefsNode.h
semantic/: ClassMemberGatherVisitor.cpp  ClassMemberGatherVisitor.h  Constants.cpp  LocalVarGatherVisitor.cpp  LocalVarGatherVisitor.h  NameTransformer.cpp  NameTransformer.h  ScopeAttachVisitor.cpp  ScopeAttachVisitor.h  ScopeVisitor.cpp  ScopeVisitor.h  Semantic.cpp  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticContext.cpp  SemanticContext.h  TypeCheckVisitor.cpp  TypeCheckVisitor.h  TypeExistenceValidator.cpp  TypeExistenceValidator.h
semantic/constants/: ConstantPool.cpp  ConstantPool.h  ConstantPoolBuilder.cpp  ConstantPoolBuilder.h  ConstantPoolVisitor.cpp  ConstantPoolVisitor.h
semantic/error/: ErrorTable.cpp  ErrorTable.h  SemanticError.cpp  SemanticError.h  SemanticErrorCode.h
semantic/scopes/: Scope.cpp  Scope.h
semantic/tables/: classtable.cpp  classtable.h  constable.cpp  constable.h  fieldtable.cpp  fieldtable.h  methodtable.cpp  methodtable.h  tables.cpp  tables.hpp  vartable.cpp  vartable.h
semantic/tools/: NameTransformer.cpp  datatype.cpp  datatype.h  tools.cpp  tools.h
tests/: array_test.txt  common_test.txt  do_while_test.txt  if_test.txt  new_common.txt  other_test.txt  precedence_test.txt
tests/codegen/: 01_spiral_matrix.scala  02_boolean_operations.scala  03_local_variables.scala  04_loops.scala  05_oop_inheritance.scala  06_access_control.scala  07_literals.scala  08_branching.scala  09_functions.scala  10_console_io.scala  11_floating_point.scala  12_overloading.scala  13_constructors.scala  14_kt_bubble_sort.scala  15_kt_recursion.scala  16_kt_passing.scala  17_id_test.scala  18_super_constr_with_arguments.scala  18_super_constr_with_arguments.txt  19_int_with_double.scala  20_abstract_members.scala  input_test.scala  multidimensional_array.scala  short_circuit_if.scala
tests/semantic/: README.md  run_tests.ps1  run_tests.py  run_tests.sh
tests/semantic/01_simple_class/: input.scala
tests/semantic/01_simple_class/expected/SimpleClass/: class_info.csv  fields.csv
tests/semantic/02_fields/: input.scala
tests/semantic/02_fields/expected/FieldsTest/: fields.csv
tests/tree/: common_test.txt  do_while_test.txt  id_test.txt  if_test.txt  method_call_test.scala  more_errors_test.scala  simple_type_test.scala  type_check_test.scala  type_error_test.scala  type_errors_test.scala
utils/: logger.h
utils/output/: dot.cpp  tree_converter.cpp
